--- a/css/custom.css
+++ b/css/custom.css
@@ -44,6 +44,21 @@ header .logo img {
     object-fit: contain;
 }
 
+.navigation.fixed {
+    height: 100px;
+}
+
+.navigation.fixed header {
+    height: 100px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+.navigation.fixed .header-content {
+    width: 100%;
+}
+
 .travel-info {
     padding: 10px 0 30px;
 }
@@ -147,5 +162,10 @@ header .logo img {
 
     .hero {
         background: url("../img/hero-mobile.jpg") center center / cover no-repeat;
+    }
+
+    header {
+        border-bottom: solid 1px rgba(255, 255, 255, 0.2);
+        padding: 40px 0;
     }
 }
